Fix amount class alignment

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .amount {
     max-width: 100px;
+    margin: auto;
 }
 
 /*
